# miner-btc

./: Cargo.toml  README.md
.githooks/: pre-commit
src/: main.rs
src/p2p/: mainnet.rs  mod.rs  testnet.rs
