[package]
name = "miner-btc"
version = "0.1.0"
authors = ["J. O. Makar <jomakar@gmail.com>"]
edition = "2021"
homepage = "https://github.com/jo-makar/miner-btc"
repository = "https://github.com/jo-makar/miner-btc"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
